# megallery-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20230111142814_create_images_table.sql  20230118115259_remove_image_data_field.sql  20230118115360_add_image_size.sql  20230118121126_create_image_files_table.sql  20230507144553_imagefile:_instead_of_filename_use_file_extensions.sql  20230509073728_add_collections.sql  20230513173626_collection_finalized.sql  20230514085058_add_image_file_kind.sql  20230516085010_images_remove_name_field.sql  20230516191402_images_add_metadata.sql  20230517091012_metadata_add_not_null_constraint.sql  20230517091234_metadata_add_default_value.sql
src/: atlas.rs  bulk.rs  db.rs  err.rs  layout.rs  main.rs  metadata.rs  upload.rs
src/layout/: dist.rs  filter.rs  sort.rs
