[package]
name = "megallery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
measure_time = "0.8"
lazy_static = "1.4"
serde = "1"
serde_bytes = "0.11"
rmp = "0.8"
rmp-serde = "1"
futures-util = "0.3"
futures = "0.3"
axum = { version = "0.6", features = ["multipart"] }
axum-macros = "0.3"
tokio = { version = "1", features = ["full"] }
image = "0.24"
fast_image_resize = "2.4"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros", "migrate"] }
uuid = { version = "1.1", features = ["serde", "v4", "fast-rng"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
tower-http = { version = "0.3", features = ["compression-br", "compression-deflate", "compression-gzip"] }